--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "module": "ES2022",
     "moduleResolution": "Bundler",
     "strict": true,
+    "resolveJsonModule": true,
     "target": "ES2020"
   }
 }
